# quizes

./: .gitignore  .myfuncs
prodjects/final_project/framework/: CMakeLists.txt  Test.cpp
prodjects/final_project/framework/MyBUSE/: NBD.hpp  test_NBD.cpp
prodjects/final_project/framework/WaitQueue/: test.cpp  test_waitqueue.cpp  waitqueue.hpp
prodjects/final_project/framework/WrapPQueue/: test_wrappqueue.cpp
prodjects/final_project/framework/include/: Asyncinjection.hpp  Delimetr.hpp  DirMonitor.hpp  Dispatcher.hpp  FRAME.hpp  Factory.hpp  FutureTask.hpp  Handleton.hpp  ITask.hpp  Listener.hpp  LogInherited.hpp  LogLevel.hpp  LogMessage.hpp  LogTask.hpp  Logger.hpp  Minion.hpp  NBD.hpp  PriorityQueue.hpp  Protocol.hpp  ProxyServer.hpp  Reactor.hpp  Receiver.hpp  Scheduler.hpp  Semaphore.hpp  Sender.hpp  Singleton.hpp  StaticListener.hpp  TasksNBD.hpp  ThreadMap.hpp  ThreadPool.hpp  Transmitter.hpp  WaitableQueue.hpp  WorkerThread.hpp  test_class.hpp
prodjects/final_project/framework/src/: Asyncinjection.cpp  CreateHandleton.cpp  DirMonitor.cpp  FOR_lib.cpp  FRAME.cpp  Listener.cpp  LogInherited.cpp  LogMessage.cpp  LogTask.cpp  Logger.cpp  Minion.cpp  NBD.cpp  Reactor.cpp  Receiver.cpp  Scheduler.cpp  StaticListener.cpp  ThreadMap.cpp  ThreadPool.cpp  Transmitter.cpp  WorkerThread.cpp
prodjects/final_project/framework/test/: CreateHandleton.cpp  CreateSingleton.cpp  Fabric.cpp  Observer.cpp  build.sh  getlib.sh  j_test_reactor.cpp  j_test_sngle.cpp  just.cpp  log.txt  plugin_handleton.cpp  server_client.sh  test.cpp  test_NBD.cpp  test_asyncinjection.cpp  (+26 more)
(+497 files in other folders)
